--- a/_posts/git/2015-10-13-git.md
+++ b/_posts/git/2015-10-13-git.md
@@ -27,7 +27,7 @@ ps：其实我用这个主要是在用终端提交代码的时候不用每次都
 
 	5.测试：ssh git@github.com
 
-##  Github
+##  git
 
 	1.获取源码：
 	$ git clone git@github.com:billyanyteen/github-services.git
@@ -44,7 +44,7 @@ ps：其实我用这个主要是在用终端提交代码的时候不用每次都
 	git commit
 
 	4.协作编程：
-	将本地repo于远程的origin的repo合并，
+	将本地repo与远程的origin的repo合并，
 	推送本地更新到远程：
 	git push origin master
 	更新远程更新到本地：
